made endpoints for all object in HUD spec
